feat(tickets): Displays "coming soon" message
Replaces the ticket iframe embed with a static
"coming soon" message.

This change is a temporary measure.

--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="iframe-wrap" [style.height.px]="iframeHeight">
-    <iframe
+    <!-- <iframe
       [src]="paylogicEmbed"
       marginwidth="0"
       marginheight="0"
@@ -20,10 +20,12 @@
       loading="lazy"
       #iframe
       (load)="onIframeLoad()"
-    ></iframe>
+    ></iframe> -->
+
+    <h3>Geht bald los!</h3>
   </div>
 </section>
-<p class="problem-text">
+<!-- <p class="problem-text">
   Ticket Shop macht Probleme?
   <a
     class="problem-link"
@@ -32,4 +34,4 @@
     rel="noopener noreferrer"
     >Hier öffnen</a
   >
-</p>
+</p> -->
