--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -10,6 +10,8 @@
   </div>
 </section>
 
+<app-photo-collage [start]="24" [count]="13"></app-photo-collage>
+
 <section class="section highlights">
   <div class="section-heading">
     <span class="eyebrow">Warum kommen</span>
@@ -39,6 +41,8 @@
     </article>
   </div>
 </section>
+
+<app-photo-collage [start]="10" [count]="9"></app-photo-collage>
 
 <section class="section newsletter">
   <div class="section-heading">
@@ -108,6 +112,8 @@
     ></iframe>
   </div>
 </section>
+
+<app-photo-collage [start]="0" [count]="10"></app-photo-collage>
 
 <section style="margin-top: 100px">
   <div class="sell-more-tickets">
