--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="iframe-wrap" [style.height.px]="iframeHeight">
-    <!-- <iframe
+    <iframe
       [src]="paylogicEmbed"
       marginwidth="0"
       marginheight="0"
@@ -20,18 +20,16 @@
       loading="lazy"
       #iframe
       (load)="onIframeLoad()"
-    ></iframe> -->
-
-    <h3>Geht bald los!</h3>
+    ></iframe>
   </div>
 </section>
-<!-- <p class="problem-text">
+<p class="problem-text">
   Ticket Shop macht Probleme?
   <a
     class="problem-link"
-    href="https://shop.paylogic.com/b6bc9231e9ca428a96862b6b04394506/?wmode=opaque"
+    href="https://shop.paylogic.com/bb04103b5d0e4c8491d10dd9e7c96ec3"
     target="_blank"
     rel="noopener noreferrer"
     >Hier öffnen</a
   >
-</p> -->
+</p>
