--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,8 +33,8 @@ body {
     -apple-system,
     sans-serif;
   background:
-    radial-gradient(circle at 20% 20%, rgba(255, 138, 91, 0.15), transparent 35%),
-    radial-gradient(circle at 80% 0%, rgba(91, 224, 255, 0.1), transparent 30%), var(--bg-deep);
+    radial-gradient(circle at 20% 20%, #4b9fa1, transparent 35%),
+    radial-gradient(circle at 80% 0%, #1e354b, transparent 30%), var(--bg-deep);
   color: var(--text-main);
   min-height: 100vh;
   text-rendering: optimizeLegibility;
