--- a/src/app/pages/tickets/tickets.component.scss
+++ b/src/app/pages/tickets/tickets.component.scss
@@ -43,7 +43,7 @@
   --ticket-urgency-scale: 1;
   --ticket-urgency-scale-pulse: 1.03;
   position: absolute;
-  top: -18px;
+  top: -50px;
   right: 260px;
   z-index: 2;
   width: min(240px, 72vw);
@@ -78,6 +78,26 @@
   pointer-events: none;
   z-index: 0;
   filter: blur(0.25px) brightness(1.1);
+}
+
+.suprised-ticket {
+  position: absolute;
+  width: 100px;
+  pointer-events: none;
+  z-index: 0;
+  height: 0;
+  right: -200px;
+  top: -160px;
+  transform: rotate(-5deg);
+  @media (max-width: 600px) {
+    right: -170px;
+    top: -180px;
+  }
+  img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
 }
 
 .ticket-urgency > * {
